name: sample
version: 1.0
synopsis: Polymorphic random sampling of containers
description: Polymorphic random sampling of containers
license: BSD3
license-file: LICENSE
author: Taylor M. Hedberg
maintainer: t@tmh.cc
copyright: ©2013 Taylor M. Hedberg
category: Data
build-type: Simple
cabal-version: >=1.8

library
  exposed-modules: Data.Sample
  build-depends:
    base ==4.6.*,
    containers ==0.5.2.*,
    random ==1.0.*,
    transformers ==0.3.*
  hs-source-dirs: src
  ghc-options: -Wall
